--- a/04node/node-day4/node-code-block/views/reg.html
+++ b/04node/node-day4/node-code-block/views/reg.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <!-- method: 方法类型  action：提交路径 -->
-    <form action="/reg" method="post">
-      用户名：<input type="text" /><br />
-      密码：<input type="text" />
+    <form action="/user/reg" method="post">
+      用户名：<input type="text" name="username" /><br />
+      密码：<input type="text" name="password" />
       <button>注册</button>
     </form>
   </body>
